Ignore Scraper-Instance.pem going forward

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,48 @@
+# Python bytecode
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environments
+venv/
+.venv/
+env/
+ENV/
+
+# Environment variable files
+.env
+.env.*
+
+# Distribution / packaging
+build/
+archive/
+dist/
+*.egg-info/
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Test / coverage results
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# MyPy & other tools
+.mypy_cache/
+.dmypy.json
+.pyre/
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+
+# OS generated files
+.DS_Store
+Thumbs.db
 Scraper-Instance.pem
